--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ trivy:
   stage: test
   image: docker:stable-git
   before_script:
-    - docker build -f "Dockerfile" -t nginx:${CI_COMMIT_SHORT_SHA} . 
+    - docker build --rm -f "Dockerfile" -t nginx:${CI_COMMIT_SHORT_SHA} . 
     - export VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
     - wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
     - tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
