--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,3 @@
-image: ubuntu
 stages:
   - test
 
@@ -6,9 +5,9 @@ trivy:
   stage: test
   image: docker:stable-git
   before_script:
-    - docker build --rm -f "Dockerfile" -t nginx:${CI_COMMIT_SHORT_SHA} . 
+    - docker build -t trivy-ci-test:${CI_COMMIT_REF_NAME} .
     - export VERSION=$(curl --silent "https://api.github.com/repos/aquasecurity/trivy/releases/latest" | grep '"tag_name":' | sed -E 's/.*"v([^"]+)".*/\1/')
-    - curl https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
+    - wget https://github.com/aquasecurity/trivy/releases/download/v${VERSION}/trivy_${VERSION}_Linux-64bit.tar.gz
     - tar zxvf trivy_${VERSION}_Linux-64bit.tar.gz
   variables:
     DOCKER_DRIVER: overlay2
@@ -16,8 +15,8 @@ trivy:
   services:
     - docker:stable-dind
   script:
-    - ./trivy --exit-code 0 --severity HIGH --no-progress --auto-refresh nginx:${CI_COMMIT_SHORT_SHA}
-    - ./trivy --exit-code 1 --severity CRITICAL --no-progress --auto-refresh nginx:${CI_COMMIT_SHORT_SHA}
+    - ./trivy --exit-code 0 --severity HIGH --no-progress --auto-refresh trivy-ci-test:${CI_COMMIT_REF_NAME}
+    - ./trivy --exit-code 1 --severity CRITICAL --no-progress --auto-refresh trivy-ci-test:${CI_COMMIT_REF_NAME}
   cache:
-    paths:
+    path:
       - $HOME/.cache/trivy
